--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "jwt-simple": "^0.5.6",
+    "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
