--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.4.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
